--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body{
-    @apply bg-black text-white text-[15px]
+    @apply bg-[color:var(--background-primary)] text-[color:var(--background-titleText)] text-[15px]
 }
 
 .sideBarMenuItem{
